[metadata]
name = bcbp
version = 0.3
author = hattr
description = A Python module to help decode IATA-standard boarding passes with barcodes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GameDesert/bcbp
project_urls =
    Bug Tracker = https://github.com/GameDesert/bcbp/issues
license = GNU GPLv3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = bcbp
packages = find:
python_requires = >=3.6

[options.packages.find]
where = bcbp